--- a/assets/styles.css
+++ b/assets/styles.css
@@ -93,6 +93,26 @@ body {
     border-color: #d37a31;
 }
 
+.card-img-top {
+    width: 100%;
+    height: 15vh;
+    object-fit: cover;
+}
+
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #414040;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
 /* Media Queries */
 
 /* @media screen and (min-width: 576px) {
