--- a/assets/styles.css
+++ b/assets/styles.css
@@ -19,7 +19,8 @@ body {
     color:  #d37a31;
     background-color: #414040;
     font-family: 'Roboto Slab', serif;
-    height: 100px;
+    height: 10vh;
+    position: fixed;
     }
 
 .navbar-style a {
@@ -45,6 +46,12 @@ body {
     background-color: #414040;
     border-color: #d37a31;
 }
+
+.small-nav-logo {
+    position: absolute;
+    top: 2.5vh;
+    right: 16px;
+    }
 
 /* Homepage */
 
@@ -119,7 +126,34 @@ body {
     background-clip: border-box;
     border: 1px solid #d37a31;
     border-radius: .25rem;
-    padding: 10px;
+    margin: 5px;
+}
+
+/* Footer */
+
+.footer-style {
+    display: flex;
+    margin: 10px 5px 10px;
+    padding: 10px 5px 10px;
+    color:  #d37a31;
+    background-color: #414040;
+    font-family: 'Roboto Slab', serif;
+    height: 80px;
+    align-content: center;
+    }
+
+.footer-style a {
+    color:  #d37a31;
+    }
+
+.footer-logo {
+    font-weight: 800;
+    margin: 10px, 100px, 10px, 10px;
+    background-color: #414040;
+    }
+
+.ftr-soc-lnk {
+    font-size:  x-large;
 }
 
 /* Media Queries */
