--- a/assets/styles.css
+++ b/assets/styles.css
@@ -132,42 +132,64 @@ body {
 /* Footer */
 
 .footer-style {
+    z-index: 1;
     display: flex;
-    margin: 10px 5px 10px;
-    padding: 10px 5px 10px;
+    padding: 15px 5px 5px;
     color:  #d37a31;
     background-color: #414040;
     font-family: 'Roboto Slab', serif;
-    height: 80px;
+    height: 10vmin;
     align-content: center;
+    border-top: 1px solid #d37a31;
+    padding-top: 20px;
     }
 
 .footer-style a {
     color:  #d37a31;
+    padding-top: 20px;
+    padding-bottom: 5px;
+    }
+
+.footer-style p {
+    color:  #d37a31;
+    padding-top: 20px;
+    padding-bottom: 5px;
     }
 
 .footer-logo {
     font-weight: 800;
-    margin: 10px, 100px, 10px, 10px;
     background-color: #414040;
+    padding-top: 20px;
+    padding-bottom: 5px;
     }
 
 .ftr-soc-lnk {
     font-size:  x-large;
 }
 
-/* Automation Blog */
+/* Blog */
 
-.auto-head {
+.card-auto {
+    position: relative;
+    display: -ms-flexbox;
+    display: inline-flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #414040;
+    color: #d37a31;
+    font-family: 'Muli', sans-serif;
+    background-clip: border-box;
+    border-radius: .25rem;
+    margin: 5px;
+    top: 30px;
+}
+
+.card-img-top-blog {
+    width: 100%;
     height: 50vh;
-    background: url('../assets/images/robot.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    object-fit: cover;
 }
 
 /* Media Queries */
