Finalised images and finishing README and testing across devices

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -108,6 +108,8 @@ body {
     border-color: #d37a31;
 }
 
+/* Not sure why this doesn't change the colour of the link */
+
 .btn-warning a {
     color: #141516;
 }
