--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,8 +2,8 @@
 
 body {
     background-color: #414040;
+    font-size: 1.25rem;
 }
-
 
 /* NavBar */
 
@@ -122,6 +122,7 @@ body {
     -ms-flex-direction: column;
     flex-direction: column;
     min-width: 0;
+    height: 700px;
     word-wrap: break-word;
     background-color: #414040;
     background-clip: border-box;
@@ -169,7 +170,7 @@ body {
 
 /* Blog */
 
-.card-auto {
+.blog-auto {
     position: relative;
     display: -ms-flexbox;
     display: inline-flex;
@@ -186,18 +187,35 @@ body {
     top: 30px;
 }
 
-.card-img-top-blog {
-    width: 100%;
-    height: 50vh;
-    object-fit: cover;
-}
-
 .btn-primary-blog {
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin-top: 15px;
+    margin-bottom: 40px;
     background-color: #d37a31; 
     color: #414040;
     border-color: #d37a31;
+}
+
+/* Modal Credits: https://stackoverflow.com/questions/20944334/how-to-center-a-modal-window-on-a-page */
+
+.modal {
+  text-align: center;
+  padding: 0!important;
+}
+.modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+
+.modal-content li{
+  margin: 10px 0;
 }
 
 /* Contact Page */
@@ -206,7 +224,7 @@ body {
     padding: 2rem 1rem;
     margin-bottom: 2rem;
     margin-top: 5rem;
-    background-color: #d37a31;
+    background-color: #d37a31d2;
     color: #414040;
     border-radius: .3rem; 
 }
@@ -216,7 +234,8 @@ body {
 } 
 
 .jumbotron img {
-    width: 100%;
+    height: 350px;
+    width: 400px;
 } 
 
 .display-4 {
@@ -225,5 +244,10 @@ body {
 
 .table td, .table th {
     border-top: 1px solid #343a40;
+}
+
+.contact-disclaimer {
+    color: #d37a31d2;
+    margin: 15px;
 }
 
