--- a/assets/styles.css
+++ b/assets/styles.css
@@ -109,9 +109,13 @@ body {
     color: #141516;
 }
 
+.hmpg-text {
+    margin-bottom: 5px;
+}
+
 .card-img-top {
     width: 100%;
-    height: 30vh;
+    height: 40vh;
     object-fit: cover;
 }
 
@@ -122,7 +126,6 @@ body {
     -ms-flex-direction: column;
     flex-direction: column;
     min-width: 0;
-    height: 700px;
     word-wrap: break-word;
     background-color: #414040;
     background-clip: border-box;
