--- a/assets/styles.css
+++ b/assets/styles.css
@@ -204,13 +204,13 @@ body {
   text-align: center;
   padding: 0!important;
 }
-.modal:before {
+/* .modal:before {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle;
   margin-right: -4px;
-}
+} */
 .modal-dialog {
   display: inline-block;
   text-align: left;
